[Variant Picker] Ensure that swatches wrap correctly (#3185)

--- a/assets/component-product-variant-picker.css
+++ b/assets/component-product-variant-picker.css
@@ -143,6 +143,7 @@ variant-selects {
 /* Custom styles for Swatch display type */
 .product-form__input--swatch {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .product-form__input--swatch .swatch-input__input + .swatch-input__label {
